# thread-agent

./: .gitignore  README.md  pyproject.toml
src/threadagent/: agent.py  agent_factory.py  agent_runner.py  agent_template.py  app.py  memory_runnable.py  project.py  project_initializer.py  project_loader.py  project_runner.py  streaming_callback.py
tests/: conftest.py  test_project_loader.py  utils.py
tests/agents/: agent_with_tool_terminal.toml  agent_with_type_summarize.toml  picture_book_writer.toml  simple_chatbot.toml
tests/config/: env.examle.toml
tests/fixtures/: config.py
tests/integration/: test_agent_runner.py
